--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -8,7 +8,13 @@
         %iframe{ src: "https://www.youtube.com/embed/VauGlDb03g0", style: "width: 100%;height: 400px;" }
       .col-md-6.col-md-pull-6
         %p
-          To bring awareness among students about socio-economic conditions in India, Think India NIT Rourkela is a student's club focused on building nation first attitute. We are a network of students engaged in knowledge synthesis and personality building. For this purpose, we network with the corporate sector and academia. We believe being students of institutions like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation. We at Think India NIT Rourkela, work towards developing knowledge and awareness about India among young students. We organise talks, debates, workshops and other events to channel knowledge to masses. We support students by availing training and internship through our network in the corporate sector and academia.
+          We are a student's club focused on building nation first attitute.
+          We work on knowledge synthesis and personality building through developing a platform for discussing issues of national importance. 
+          We also network with the corporate sector and academia to channel knowldge to our members. 
+          We believe that being students of institutions like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation. 
+          We at Think India NIT Rourkela, work towards developing knowledge and awareness about India among young students. 
+          We organise talks, debates, workshops and other events to channel knowledge to masses. 
+          We also support students by availing training and internship through our network in the corporate sector and academia.
     / divider
     .row
       .col-md-12
