--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,7 +3,7 @@
     .row
       .col-md-12
         .big-cta
-          %h5 Did you find this portal intrusting? Help us to expand our reach. Invite your friends to Think India NITR!
+          %h5 Help us to expand our reach. Invite your friends to Think India NITR!
           = form_tag user_invitations_path do
             .col-md-3= text_field_tag :name, nil, class: 'form-control', placeholder: 'Name'
             .col-md-3= text_field_tag :email, nil, class: 'form-control', placeholder: 'Email'
