--- a/app/views/layouts/_top_navigation.html.haml
+++ b/app/views/layouts/_top_navigation.html.haml
@@ -18,6 +18,8 @@
       %span.caret
     %ul.dropdown-menu
       %li
+        %a{:href => "/ideas-2020"} Ideas 2020
+      %li
         %a{:href => "/forum"} Forum
       %li
         %a{:href => "/blogs"} Blog
