--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -11,7 +11,7 @@
     %tbody
       - @users.each do |user|
         %tr
-          %td= user.email
+          %td= link_to user.email, "/users/#{user.slug}"
           %td= user.name
           %td= link_to user.activation_status, activation_admin_user_path(user), title: 'Click to toggle status', method: :put
           %td= link_to user.is_admin ? "True" : "False" , update_is_admin_admin_user_path(user), title: 'Click to toggle status', method: :put 
