--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -39,6 +39,18 @@
           %i (we need your current password to confirm your changes)
           %br/
           = f.password_field :current_password, autocomplete: "current-password", class: 'form-control'
+        .field
+          = f.label "Roll No"
+          %br/
+          = f.text_field :roll_no, class: 'form-control'
+        .field
+          = f.label "Batch & Year"
+          %br/
+          = f.text_field :batch_and_year, class: 'form-control'
+        .field
+          = f.label :aim_and_future_plan
+          %br/
+          = f.text_field :aim_and_future_plan, class: 'form-control'
       .col-md-6
         = image_tag(current_user.profile_pic.url, width: 300, height: 300)
         %br/
@@ -46,8 +58,22 @@
         = f.label :profile_pic
         %br/
         = f.file_field :profile_pic
-    .actions
-      = f.submit "Update", class: 'btn btn-primary'
+        .field
+          = f.label :hometown
+          %br/
+          = f.text_field :hometown, class: 'form-control'
+        .field
+          = f.label :interest_area
+          %br/
+          = f.text_field :interest_area, class: 'form-control'
+        .field
+          = f.label :hobbies
+          %br/
+          = f.text_field :hobbies, class: 'form-control'
+    .row
+      .col-md-12 
+        .actions
+          = f.submit "Update", class: 'btn btn-primary'
   %h3 Cancel my account
   %p
     Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' unless current_user.admin}
