--- a/app/views/call_your_friends/_form.html.haml
+++ b/app/views/call_your_friends/_form.html.haml
@@ -2,7 +2,7 @@
 = simple_nested_form_for(@call_your_friend) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-
+  %small * marked fields are mendetory
   .form-inputs
     = f.input :your_name
   .row
