--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -8,12 +8,12 @@
         %iframe{ src: "https://www.youtube.com/embed/VauGlDb03g0", style: "width: 100%;height: 400px;" }
       .col-md-6.col-md-pull-6
         %p
-          We are a student's club focused on building nation first attitute.
-          We work on knowledge synthesis and personality building through developing a platform for discussing issues of national importance. 
-          We also network with the corporate sector and academia to channel knowldge to our members. 
-          We believe that being students of institutions like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation. 
-          We at Think India NIT Rourkela, work towards developing knowledge and awareness about India among young students. 
-          We organise talks, debates, workshops and other events to channel knowledge to masses. 
+          We are a student's club focused on building the nation first attitude.
+          We work on knowledge synthesis and personality building by developing a platform for discussing issues of national importance.
+          We also network with the corporate sector and academia to channel knowledge to our members.
+          We believe that being students of institutions like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation.
+          We at Think India NIT Rourkela, work towards developing knowledge and awareness about India among young students.
+          We organize talks, debates, workshops, and other events to channel knowledge to masses.
           We also support students by availing training and internship through our network in the corporate sector and academia.
     / divider
     .row
@@ -75,25 +75,29 @@
                 1. What we do
             #collapseOne.accordion-body.collapse.in
               .accordion-inner
-                %p We organize talks of emminent personalities, seminars, training sessions, different types workshops, leadership development program and activities. These activities are targeted to facilitate capicity building amoung young students to serve the nation in a better way.  
+                %p 
+                  We organize talks of eminent personalities, seminars, training sessions, different types of workshops, leadership development programs, and activities. These activities are targeted to facilitate capacity building among young students to serve the nation in a better way.
           .accordion-group
             .accordion-heading
               %a.accordion-toggle{"data-parent" => "#accordion2", "data-toggle" => "collapse", :href => "#collapseTwo"}
                 2. Work process
             #collapseTwo.accordion-body.collapse
               .accordion-inner
-                %p Except for our formal designations, we have our core commitee in place. This core commitee handles all planning and execution process. We focus more on co-ordination then designation. Our energatic team keeps things running smoothly.
+                %p 
+                  Except for our formal designations, we have our core committee in place. This core committee handles all planning and execution process. We focus more on co-ordination then designation. Our energetic team keeps things running smoothly.
           .accordion-group
             .accordion-heading
               %a.accordion-toggle{"data-parent" => "#accordion2", "data-toggle" => "collapse", :href => "#collapseThree"}
                 3. Training & Internships
             #collapseThree.accordion-body.collapse
               .accordion-inner
-                %p We are engaged with a number of corporate gropus where we assist in securing traing and interships for our members.
+                %p 
+                  We are engaged with a number of corporate groups where we assist in securing training and internships for our members.
           .accordion-group
             .accordion-heading
               %a.accordion-toggle{"data-parent" => "#accordion2", "data-toggle" => "collapse", :href => "#collapseFour"}
                 4. What we can deliver
             #collapseFour.accordion-body.collapse
               .accordion-inner
-                %p We deliver quality in all the areas where we can work on. Our only goal is making our nation a better place.
+                %p 
+                  We deliver quality in all areas. Our only goal is to make our nation a better place.
