--- a/app/views/layouts/_top_navigation.html.haml
+++ b/app/views/layouts/_top_navigation.html.haml
@@ -20,6 +20,8 @@
       %li
         %a{:href => "/ideas-2020"} Ideas 2020
       %li
+        %a{:href => question_papers_path} Mock Papers
+      %li
         %a{:href => "/forum"} Forum
       %li
         %a{:href => "/blogs"} Blog
