--- a/app/assets/stylesheets/overwrite.css
+++ b/app/assets/stylesheets/overwrite.css
@@ -892,6 +892,7 @@ font-size: 10px;
 .navbar .nav > li > a {
   float: none;
   font-size:13px;
+  font-weight: bold;
   padding: 10px 0 10px;
   margin-left:20px;
   margin-right:0;
