--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -538,7 +538,7 @@ select.selectmenu {
   position: absolute;
   left: 80px;
   bottom: 15%;
-  background: rgb(0, 0, 0, 0.4);
+  background: #00000066;
   color: #fff;
   width: 50%;
   height: 70%;
