--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,12 +1,20 @@
 .container.mini-frame
-  %h2 Resend confirmation instructions
-  = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
-    = render "devise/shared/error_messages", resource: resource
-    .field
-      = f.label :email
+  .row
+    .col-md-6
+      %h2 Resend confirmation instructions
+      %b Confirmation mail may have been moved to spam folder of your mailbox. Please check there too.
+      = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
+        = render "devise/shared/error_messages", resource: resource
+        .field
+          = f.label :email
+          %br/
+          = f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control'
+          %br/
+        .actions
+          = f.submit "Resend confirmation instructions", { class: 'btn btn-primary' }
+      = render "devise/shared/links"
+    .col-md-6
       %br/
-      = f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), input_html: {class: 'form-control'}
       %br/
-    .actions
-      = f.submit "Resend confirmation instructions"
-  = render "devise/shared/links"
+      %br/
+      %br/
