--- a/app/views/home/_join_us.html.haml
+++ b/app/views/home/_join_us.html.haml
@@ -11,7 +11,7 @@
   .field
     = f.label :email
     %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+    = f.email_field :email, autocomplete: "email", class: 'form-control'
   .field
     = f.label :password
     - if @minimum_password_length
